# beverage-manufacturing-suite

./: .gitignore  README.md  RELEASE_NOTES.md  REVIEW.md  STH_Run001_Ingredient_Cost_Per_Can.xlsx  batch-calculator-v4.html  eslint.config.js  index.html  mission-control.js  package-lock.json  package.json  packaging.html  pyproject.toml  shared-data.js  vercel.json
api/: inventory.js  katana-webhook.js
make/: katana-inventory-sync.json
polymarket-arbitrage-bot/: .env.example  .gitignore  README.md
polymarket-arbitrage-bot/src/: bot.py
polymarket-arbitrage-bot/tests/: test_arbitrage.py
public/: batch-calculator-v4.html  command-palette.js  mission-control.js  shared-data.js
public/legacy/: batch-calculator-v4.html  copacking-calculator.html  inventory.html  mission-control.html  services.html
src/: App.jsx  cli.py  index.css
src/components/: CommandPalette.jsx  Layout.jsx  TypeAhead.jsx
src/core/: arbitrage.py  clob_api.py
src/dashboard/: server.py
src/data/: defaults.js  drayhorsePricing.js  store.js  supabase.js
src/hooks/: useKeyboardShortcuts.js  useLocalStorageSync.js
src/pages/: BatchCalculator.jsx  ClientProfile.jsx  CoPackingCalculator.jsx  ConsolidatedPO.jsx  FormulaLibrary.jsx  Home.jsx  Inventory.jsx  MissionControl.jsx  Packaging.jsx  Services.jsx  Summary.jsx  TreasuryCockpit.jsx
src/utils/: coverLetter.js  excelStyle.js  exportClientQuote.js  exportConsolidatedPO.js  exportExcel.js  exportRunComparison.js  exportRunComparisonSheet.js  exportTreasury.js  feeTypes.js  googleSheets.js  (+6 more)
tests/: test_arbitrage.py  test_executor.py
(+14 files in other folders)
